welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:12: error: '<-' expected but ')' found.
			for(e<1 to 15) {recule();}
                                     ^PictureMono2:13: error: illegal start of simple expression
			left();for(f<-1 to 5) {avance();}right();}
                                                                 ^